Fix recent margin change for action overlapping other elements

--- a/Theme.scss
+++ b/Theme.scss
@@ -1927,7 +1927,7 @@ a.card.bg-gray-light:hover,
 }
 
 .discussion-timeline-actions [type="submit"] {
-    margin: -10px 8px 0px 0px !important;
+    margin: -5px 8px 0px 0px !important;
 }
 
 .timeline-new-comment .form-actions div {
